# iphone_lockscreen_calendar

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: docker.yml
inputs/: config.toml.example
tests/: simple_test.py  test_background.py  test_generate_lockscreen.py  test_get_todays_events.py  test_upload_to_s3.py  test_visual_lockscreen.py
